--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,20 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "3.11.5"
 pandas = "^2.2.2"
-numpy = "^2.1.1"
+numpy = "1.24.4"
 rdkit = "^2024.3.5"
 scikit-learn = "^1.5.1"
 seaborn = "^0.13.2"
 matplotlib = "^3.9.2"
+tqdm = "^4.66.5"
+deepchem = "^2.8.0"
+mendeleev = "^0.17.0"
+torch = "^2.4.1"
+torch-geometric = "^2.6.0"
+torchmetrics = "^1.4.2"
+pytorch-lightning = "^2.4.0"
+tensorflow = "^2.17.0"
+lightning = "^2.4.0"
 
 
 [tool.poetry.group.dev.dependencies]
