--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ torchmetrics = "^1.4.2"
 pytorch-lightning = "^2.4.0"
 tensorflow = "^2.17.0"
 lightning = "^2.4.0"
+transformers = "^4.44.2"
 
 
 [tool.poetry.group.dev.dependencies]
